--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf 8" />
+    <title>Värejä</title>
+</head>
+
 <body>
     <h1>Hello World!</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Integer arcu orci, mattis sit amet tincidunt fringilla,
+        bibendum sit amet arcu.</p>
+
 </body>
 
 </html>
