--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <meta charset="utf 8" />
+    <meta charset="utf-8" />
     <title>Värejä</title>
 </head>
 
 <body>
     <h1>Hello World!</h1>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Integer arcu orci, mattis sit amet tincidunt fringilla,
-        bibendum sit amet arcu.</p>
+    <div class="text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <ol>
+        <li>Tämä on ordered list</li>
+        <li>Tämä on ordered list</li>
+    </ol>
+    <ul>
+        <li>Tämä on unordered list</li>
+        <li>Tämä on unordered list</li>
+    </ul>
 
 </body>
 
