--- a/index.html
+++ b/index.html
@@ -2,24 +2,12 @@
 <html lang="fi">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
-    <title>Värejä</title>
+    <title>Tehtävä 00B</title>
 </head>
+<h1>Hello World!</h1>
 
 <body>
-    <h1>Hello World!</h1>
-    <div class="text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <ol>
-        <li>Tämä on ordered list</li>
-        <li>Tämä on ordered list</li>
-    </ol>
-    <ul>
-        <li>Tämä on unordered list</li>
-        <li>Tämä on unordered list</li>
-    </ul>
 
 </body>
 
