--- a/second.html
+++ b/second.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="4b.css">
     <title>Tehtävä 4B</title>
 </head>
 
 <a href="index.html">Index.html</a>
 
 <body>
+
     <h1>Tämä on otsikko</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut blandit nulla.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -25,11 +27,10 @@ https://www.laurea.fi/globalassets/logot/laurea/neliotunnus_laurea_rgb.png" widt
         <figcaption>Wikipedian logo</figcaption>
     </figure>
 
+
     <label for="Progress">Progress</label>
     <progress id="Progress" value="25" max="100"> 25% </progress>
 </body>
-
-
 
 
 </html>
