--- a/layout.html
+++ b/layout.html
@@ -23,57 +23,41 @@
     </div>
 
     <div class="rivi">
-        <div class="section">
-            <section>
+        <div class="vasenrivi">
+            <div class="section">
                 <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Curabitur non enim bibendum, euismod turpis in, dignissim ante.
-                    Aenean eu quam convallis, varius diam nec, laoreet lacus.
-                    Mauris ultrices tincidunt velit, vel facilisis nulla fermentum et.
-                    Fusce ullamcorper, mauris sed egestas lacinia,
-                    sem ligula posuere nunc, sed accumsan erat augue et ipsum.</a>
-            </section>
+                    Aenean ut est lorem. Morbi sit amet lacus sem.
+                    Duis vulputate semper dui, ut convallis orci hendrerit ac.
+                    Nam volutpat leo urna, eget molestie turpis efficitur ut.
+                    In sollicitudin ipsum at lacus ullamcorper condimentum.
+                    Maecenas a dignissim nunc.</a>
+            </div>
+            <div class="article">
+                <h2>Tämä on article otsikko</h2>
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aenean ut est lorem. Morbi sit amet lacus sem.
+                    Duis vulputate semper dui, ut convallis orci hendrerit ac.
+                    Nam volutpat leo urna, eget molestie turpis efficitur ut.
+                    In sollicitudin ipsum at lacus ullamcorper condimentum.
+                    Maecenas a dignissim nunc.</a>
+            </div>
         </div>
 
-        <div class="article">
-            <article>
-                <h2>Lorem ipsum on hyvä juttu</h2>
+        <div class="oikearivi">
+            <div class="aside">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Curabitur non enim bibendum, euismod turpis in, dignissim ante.
-                    Aenean eu quam convallis, varius diam nec, laoreet lacus.
-                    Mauris ultrices tincidunt velit, vel facilisis nulla fermentum et.
-                    Fusce ullamcorper, mauris sed egestas lacinia,
-                    sem ligula posuere nunc, sed accumsan erat augue et ipsum.</p>
-            </article>
-        </div>
-
-        <div class="aside">
-            <aside>
+                    Aenean ut est lorem. Morbi sit amet lacus sem.
+                    Duis vulputate semper dui, ut convallis orci hendrerit ac.
+                    Nam volutpat leo urna, eget molestie turpis efficitur ut.
+                    In sollicitudin ipsum at lacus ullamcorper condimentum.
+                    Maecenas a dignissim nunc.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Suspendisse mattis suscipit cursus.
-                    Duis venenatis tempus leo a vestibulum.
-                    Nam metus odio, venenatis id odio at, dictum facilisis ipsum.
-                    In hac habitasse platea dictumst.
-                    Sed in mauris leo. In eget massa non augue dictum maximus.
-                    Curabitur rhoncus finibus ex at rhoncus.
-                    uspendisse dapibus pharetra libero sed efficitur.
-                    Phasellus purus ligula, tempus eu leo ac, fermentum efficitur libero.
-                    Integer elementum nulla at pellentesque efficitur.
-                    Nunc posuere vulputate libero, quis pharetra ante pretium sed. Nam ultrices quis mauris at commodo.
-                    Nunc
-                    ac
-                    ligula eu mauris lacinia vehicula.</p>
-                <p>Vestibulum commodo mattis fermentum. Cras sit amet justo pulvinar, tincidunt ex a, finibus sem.
-                    Aenean
-                    iaculis libero arcu, ac pharetra magna aliquam vitae.
-                    Nunc dictum massa et risus viverra, non consequat urna feugiat.
-                    Duis nec lacus ultrices, ultrices mi pretium, tempus metus.
-                    Sed suscipit, libero eget consequat hendrerit, urna dui egestas libero, a condimentum quam lectus at
-                    lectus.
-                    Integer commodo consequat justo, quis congue est facilisis vel. Maecenas imperdiet massa
-                    consectetur,
-                    euismod metus eu, fermentum libero.
-                    Suspendisse porta posuere efficitur.</p>
-            </aside>
+                    Aenean ut est lorem. Morbi sit amet lacus sem.
+                    Duis vulputate semper dui, ut convallis orci hendrerit ac.
+                    Nam volutpat leo urna, eget molestie turpis efficitur ut.
+                    In sollicitudin ipsum at lacus ullamcorper condimentum.
+                    Maecenas a dignissim nunc.</p>
+            </div>
         </div>
     </div>
 
