--- a/layout.html
+++ b/layout.html
@@ -11,14 +11,15 @@
 <body>
 
     <div class="header">
-        <h1>Tehtävä 05B Header-otsikko</h1>
+        <h1>Tehtävä 05B</h1>
         <hr>
     </div>
 
     <div class="nav">
         <nav>
             <a href="index.html">Index.html</a> |
-            <a href="second.html">Second.html</a>
+            <a href="second.html">Second.html</a> |
+            <a href="third.html">Third.html</a>
         </nav>
     </div>
 
