--- a/8bwireframe/work.html
+++ b/8bwireframe/work.html
@@ -18,6 +18,10 @@
     <div class="yläcontainer">
         <div class="customrow">
             <h1>Vili Ilkko</h1>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">Button</button>
+                <button class="btn btn-primary" type="button">Button</button>
+            </div>
 
             <button>
                 <a href="wframe.html">Front Page</a>
@@ -26,9 +30,9 @@
     </div>
 
     <nav class="navbar navbar-light bg-light">
-        <div class="container">
+        <div class="container fluid">
             <a class="navbar-brand" href="#">About</a>
-            <a class="navbar-brand" href="#">Work</a>
+            <a class="navbar-brand active" aria-current="page" href="work.html">Work</a>
             <a class="navbar-brand" href="#">Contact</a>
         </div>
     </nav>
