--- a/components.html
+++ b/components.html
@@ -42,10 +42,12 @@
     </div>
 
     <div class="containerkuva">
-        <div class="col-4"> <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
-                class="img-fluid" alt="bootstrap logo"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
+        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
+            class="rounded-circle float-star" height="300px" width="300px" alt="bootstrap logo">
+        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
+            class="rounded-circle mx-auto d-block" height="300px" width="300px" alt="bootstrap logo">
+        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
+            class="rounded-circle float-end" height="300px" width="300px" alt="bootstrap logo">
     </div>
 
 
