--- a/8bwireframe/contact.html
+++ b/8bwireframe/contact.html
@@ -30,14 +30,6 @@
         </div>
     </nav>
 
-
-    <div class="container">
-        <div id="kuva">
-            <img src="stockimage.jpeg" class="img-fluid" alt="a man in a suit" width="200" height="150">
-        </div>
-    </div>
-
-
     <div class="container">
         <div class="row">
             <div class="col"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -49,13 +41,11 @@
                 per inceptos himenaeos.</div>
 
 
-            <div class="col"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mauris ac nibh sit amet felis vehicula feugiat id a purus.
-                Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mauris ac nibh sit amet felis vehicula feugiat id a purus.
-                Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                per inceptos himenaeos.</div>
+            <div class="col">
+                <div id="kuva">
+                    <img src="stockimage.jpeg" class="img-fluid" alt="a man in a suit" height="500" width="400">
+                </div>
+            </div>
         </div>
     </div>
 
