--- a/8bwireframe/wframe.html
+++ b/8bwireframe/wframe.html
@@ -14,14 +14,19 @@
 </head>
 
 <body>
-    <h1>Vili Ilkko</h1>
 
+    <div class="position-relative">
+        <h1>Vili Ilkko</h1>
+        <div class="position-absolute bottom-0 end-0">
+            <button class="btn me-md-2" type="button">Front Page</button>
+        </div>
+    </div>
 
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">About</a>
-            <a class="navbar-brand" href="#">Work</a>
-            <a class="navbar-brand" href="#">Contact</a>
+            <a class="navbar-brand" href="about.html">About</a>
+            <a class="navbar-brand" href="work.html">Work</a>
+            <a class="navbar-brand" href="contact.html">Contact</a>
         </div>
     </nav>
 
@@ -39,7 +44,7 @@
     <footer class="bg-light text-center text-lg-start">
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2020 Copyright:
+            © 2021 Copyright:
             <a class="text-dark">Vili Ilkko</a>
         </div>
 
