--- a/8bwireframe/about.html
+++ b/8bwireframe/about.html
@@ -63,7 +63,7 @@
 
     <footer class="bg-light text-center text-lg-start">
 
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3 fixed-bottom" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2021 Copyright:
             <a class="text-dark">Vili Ilkko</a>
         </div>
