--- a/8bwireframe/about.html
+++ b/8bwireframe/about.html
@@ -61,13 +61,11 @@
 
     <hr>
 
-    <footer class="bg-light text-center text-lg-start">
-
-        <div class="text-center p-3 fixed-bottom" style="background-color: rgba(0, 0, 0, 0.2);">
+    <footer class="footer">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2021 Copyright:
             <a class="text-dark">Vili Ilkko</a>
         </div>
-
     </footer>
 
 
