--- a/8bwireframe/work.html
+++ b/8bwireframe/work.html
@@ -62,14 +62,13 @@
 
     <hr>
 
-    <footer class="bg-light text-center text-lg-start">
-
+    <footer class="footer">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2021 Copyright:
             <a class="text-dark">Vili Ilkko</a>
         </div>
-
     </footer>
+
 
 
 
