--- a/homepage/works.html
+++ b/homepage/works.html
@@ -34,36 +34,40 @@
             <div class="row gy-5">
                 <div class="col-6">
                     <div class="p-3 border bg-light"><img src="images/crying.JPG" class="img-thumbnail"
-                            alt="a black cat">A
-                        black cat
+                            alt="Misery">Misery, Acrylic, 210 x 297 mm.
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="p-3 border bg-light"><img src="images/back Large.png" class="img-thumbnail"
-                            alt="man in a suit">Sample text
+                            alt="Thoughts">Thoughts, Acrylic, 210 x 297 mm.
                     </div>
                 </div>
                 <div class="row gy-5">
                     <div class="col-6">
                         <div class="p-3 border bg-light"><img src="images/back2.JPG" class="img-thumbnail"
-                                alt="man in a suit">Sample text
+                                alt="Relaxation">Relaxation, Acrylic, 210 x 297 mm.
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="p-3 border bg-light"><img src="images/headless.JPG" class="img-thumbnail"
-                                alt="man in a suit">Sample text
+                                alt="Faceless">Faceless, Acrylic, 210 x 297 mm.
                         </div>
                     </div>
                 </div>
                 <div class="row gy-5">
                     <div class="col-6">
                         <div class="p-3 border bg-light"><img id="orange" src="images/orange.JPG" class="img-thumbnail"
-                                alt="man in a suit">Sample text
+                                alt="Vogue pose">Vogue pose, Acrylic, 210 x 297 mm.
+                        </div>
+                        <div id="myModal" class="modal">
+                            <span class="close">&times;</span>
+                            <img class="modal-content" id="img01">
+                            <div id="caption"></div>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="p-3 border bg-light"><img src="images/frontpage.JPG" class="img-thumbnail"
-                                alt="man in a suit">Sample text
+                                alt="Acceptance">Acceptance, Acrylic, 210 x 297 mm.
                         </div>
                     </div>
                 </div>
@@ -93,6 +97,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
+    <script>
+
+        var modal = document.getElementById("myModal");
+
+        // Get the image and insert it inside the modal - use its "alt" text as a caption
+        var img = document.getElementById("orange");
+        var modalImg = document.getElementById("img01");
+        var captionText = document.getElementById("caption");
+        img.onclick = function () {
+            modal.style.display = "block";
+            modalImg.src = this.src;
+            captionText.innerHTML = this.alt;
+        }
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+    </script>
 
 
 
