--- a/homepage/works.html
+++ b/homepage/works.html
@@ -31,53 +31,88 @@
 
     <main class="flex-shrink-0">
         <div class="container overflow-hidden">
-            <div class="row gy-5">
-                <div class="col-6">
-                    <div class="p-3 border bg-light"><img src="images/crying.JPG" class="img-thumbnail"
-                            alt="Misery">Misery, Acrylic, 210 x 297 mm.
-                    </div>
+            <div class="row">
+                <div class="column">
+                    <img src="images/headless.JPG" style="width:100%" onclick="openModal();currentSlide(1)"
+                        class="hover-shadow cursor img-thumbnail">
                 </div>
-                <div class="col-6">
-                    <div class="p-3 border bg-light"><img src="images/back Large.png" class="img-thumbnail"
-                            alt="Thoughts">Thoughts, Acrylic, 210 x 297 mm.
-                    </div>
+                <div class="column">
+                    <img src="images/orange.JPG" style="width:100%" onclick="openModal();currentSlide(2)"
+                        class="hover-shadow cursor img-thumbnail">
                 </div>
-                <div class="row gy-5">
-                    <div class="col-6">
-                        <div class="p-3 border bg-light"><img src="images/back2.JPG" class="img-thumbnail"
-                                alt="Relaxation">Relaxation, Acrylic, 210 x 297 mm.
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="p-3 border bg-light"><img src="images/headless.JPG" class="img-thumbnail"
-                                alt="Faceless">Faceless, Acrylic, 210 x 297 mm.
-                        </div>
-                    </div>
+                <div class="column">
+                    <img src="images/back.JPG" style="width:100%" onclick="openModal();currentSlide(3)"
+                        class="hover-shadow cursor img-thumbnail">
                 </div>
-                <div class="row gy-5">
-                    <div class="col-6">
-                        <div class="p-3 border bg-light"><img id="orange" src="images/orange.JPG" class="img-thumbnail"
-                                alt="Vogue pose">Vogue pose, Acrylic, 210 x 297 mm.
-                        </div>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img01">
-                            <div id="caption"></div>
-                        </div>
+                <div class="column">
+                    <img src="images/back2.JPG" style="width:100%" onclick="openModal();currentSlide(4)"
+                        class="hover-shadow cursor img-thumbnail">
+                </div>
+                <div class="column">
+                    <img src="images/crying.JPG" style="width:100%" onclick="openModal();currentSlide(5)"
+                        class="hover-shadow cursor img-thumbnail">
+                </div>
+            </div>
+
+            <div id="myModal" class="modal">
+                <span class="close cursor" onclick="closeModal()">&times;</span>
+                <div class="modal-content">
+
+                    <div class="mySlides">
+                        <div class="numbertext">1 / 5</div>
+                        <img src="images/headless.JPG" style="width:50%">
                     </div>
-                    <div class="col-6">
-                        <div class="p-3 border bg-light"><img id="frontpage" src="images/frontpage.JPG"
-                                class="img-thumbnail" alt="Acceptance">Acceptance, Acrylic, 210 x 297 mm.
-                        </div>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img01">
-                            <div id="caption"></div>
-                        </div>
+
+                    <div class="mySlides">
+                        <div class="numbertext">2 / 5</div>
+                        <img src="images/orange.JPG" style="width:50%">
+                    </div>
+
+                    <div class="mySlides">
+                        <div class="numbertext">3 / 5</div>
+                        <img src="images/back.JPG" style="width:50%">
+                    </div>
+
+                    <div class="mySlides">
+                        <div class="numbertext">4 / 5</div>
+                        <img src="images/back2.JPG" style="width:50%">
+                    </div>
+
+                    <div class="mySlides">
+                        <div class="numbertext">5 / 5</div>
+                        <img src="images/crying.JPG" style="width:50%">
+                    </div>
+
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                    <div class="caption-container">
+                        <p id="caption"></p>
+                    </div>
+
+
+                    <div class="column">
+                        <img class="demo cursor" src="images/headless.JPG" style="width: 50%" onclick="currentSlide(1)"
+                            alt="Headless">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/orange.JPG" style="width:50%" onclick="currentSlide(2)"
+                            alt="Vogue Pose">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/back.JPG" style="width:50%" onclick="currentSlide(3)"
+                            alt="Mountains and fjords">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/back2.JPG" style="width:50%" onclick="currentSlide(4)"
+                            alt="Northern Lights">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/crying.JPG" style="width:50%" onclick="currentSlide(5)"
+                            alt="Anxiety">
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
 
@@ -91,38 +126,45 @@
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
     <script>
-
-        var modal = document.getElementById("myModal");
-
-        // Get the image and insert it inside the modal - use its "alt" text as a caption
-        var img = document.getElementById("orange");
-        var img = document.getElementById("frontpage");
-        var modalImg = document.getElementById("img01");
-        var captionText = document.getElementById("caption");
-        img.onclick = function () {
-            modal.style.display = "block";
-            modalImg.src = this.src;
-            captionText.innerHTML = this.alt;
+        function openModal() {
+            document.getElementById("myModal").style.display = "block";
         }
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+        function closeModal() {
+            document.getElementById("myModal").style.display = "none";
+        }
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("demo");
+            var captionText = document.getElementById("caption");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+            captionText.innerHTML = dots[slideIndex - 1].alt;
         }
     </script>
 
