--- a/homepage/about.html
+++ b/homepage/about.html
@@ -32,14 +32,12 @@
     <main class="flex-shrink-0">
         <div class="container">
             <div class="row">
-                <div class="col">This site is dedicated to paintings made by my significant other Vilma.
-                    The works are for sale unless told otherwise. All of the paintings are made by her.
+                <div class="col">lorem ipsum jne
                 </div>
 
 
                 <div class="col">
-                    Most of the paintings are made by acrylic or watercolours. The paintings also use different
-                    techniques. Our cat might show up in a few pictures too!
+                    lorem ipsum jne
                 </div>
             </div>
         </div>
