--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -18,7 +18,7 @@
 <body class="d-flex flex-column h-100">
 
     <div class="position-relative">
-        <h1>Vili Ilkko</h1>
+        <h1>Vilma</h1>
         <div class="position-absolute bottom-0 end-0">
             <a href="index.html" class="btn me-md-2" type="button">Front Page</a>
         </div>
