--- a/homepage/index.html
+++ b/homepage/index.html
@@ -40,7 +40,10 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/kukat.JPG" alt="sunflowers">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="#777"></rect>
+                </svg>
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Welcome to Vilma's art webpage.</h1>
@@ -78,6 +81,7 @@
             </div>
         </div>
     </div>
+
 
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
