--- a/homepage/works.html
+++ b/homepage/works.html
@@ -15,7 +15,7 @@
 <body class="d-flex flex-column h-100">
 
     <div class="position-relative">
-        <h1>Vili Ilkko</h1>
+        <h1>Vilma</h1>
         <div class="position-absolute bottom-0 end-0">
             <a href="index.html" class="btn me-md-2" type="button">Front Page</a>
         </div>
@@ -68,7 +68,7 @@
                         <img src="images/orange.JPG" style="width:50%">
                     </div>
 
-                    <div class="mySlides">
+                    <div class=" mySlides">
                         <div class="numbertext">3 / 5</div>
                         <img src="images/back.JPG" style="width:50%">
                     </div>
@@ -78,7 +78,7 @@
                         <img src="images/back2.JPG" style="width:50%">
                     </div>
 
-                    <div class="mySlides">
+                    <div class=" mySlides">
                         <div class="numbertext">5 / 5</div>
                         <img src="images/crying.JPG" style="width:50%">
                     </div>
