--- a/homepage/works.html
+++ b/homepage/works.html
@@ -83,8 +83,8 @@
                         <img src="images/crying.JPG" style="width:50%">
                     </div>
 
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="prev top-50 start-0" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next top-50" onclick="plusSlides(1)">&#10095;</a>
 
                     <div class="caption-container">
                         <p id="caption"></p>
