--- a/homepage/about.html
+++ b/homepage/about.html
@@ -32,12 +32,17 @@
     <main class="flex-shrink-0">
         <div class="container">
             <div class="row">
-                <div class="col">lorem ipsum jne
+                <div class="col">All of the paintings are made by me, Vilma. When I was painting them
+                    I painted them according to my current feelings. The paintings are painted by acrylic colours and
+                    most of them to A4 sized
+                    painting paper. This website is made by my boyfriend, Vili Ilkko.
                 </div>
 
 
                 <div class="col">
-                    lorem ipsum jne
+                    The works are for sale and you can contact me by filling the form on the contact page.
+                    The works are not framed and so, I can frame them for extra cost. Fill the information
+                    as precisely you can, so I can fulfill your wishes. You can also ask me for more details!
                 </div>
             </div>
         </div>
