--- a/homepage/index.html
+++ b/homepage/index.html
@@ -59,9 +59,9 @@
 
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Another example headline.</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <h1>All of the works are made by me.</h1>
+                        <p>The paintings are made with acrylic colours.</p>
+                        <p><a class="btn btn-lg btn-primary" href="works.html">Find them here</a></p>
                     </div>
                 </div>
             </div>
@@ -73,9 +73,9 @@
 
                 <div class="container">
                     <div class="carousel-caption text-end">
-                        <h1>One more for good measure.</h1>
-                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                        <h1>The paintings are for sale.</h1>
+                        <p>You can contact me by filling the form.</p>
+                        <p><a class="btn btn-lg btn-primary" href="contact.html">Contact form </a></p>
                     </div>
                 </div>
             </div>
