--- a/homepage/works.html
+++ b/homepage/works.html
@@ -33,23 +33,23 @@
         <div class="container overflow-hidden">
             <div class="row">
                 <div class="column">
-                    <img src="images/headless.JPG" style="width:100%" onclick="openModal();currentSlide(1)"
+                    <img src="images/headless.JPG" alt="Faceless" style="width:100%"
+                        onclick="openModal();currentSlide(1)" class="hover-shadow cursor img-thumbnail">
+                </div>
+                <div class="column">
+                    <img src="images/orange.JPG" alt="Vogue pose" style="width:100%"
+                        onclick="openModal();currentSlide(2)" class="hover-shadow cursor img-thumbnail">
+                </div>
+                <div class="column">
+                    <img src="images/back.JPG" alt="Thoughts" style="width:100%" onclick="openModal();currentSlide(3)"
                         class="hover-shadow cursor img-thumbnail">
                 </div>
                 <div class="column">
-                    <img src="images/orange.JPG" style="width:100%" onclick="openModal();currentSlide(2)"
-                        class="hover-shadow cursor img-thumbnail">
+                    <img src="images/back2.JPG" alt="Relaxation" style="width:100%"
+                        onclick="openModal();currentSlide(4)" class="hover-shadow cursor img-thumbnail">
                 </div>
                 <div class="column">
-                    <img src="images/back.JPG" style="width:100%" onclick="openModal();currentSlide(3)"
-                        class="hover-shadow cursor img-thumbnail">
-                </div>
-                <div class="column">
-                    <img src="images/back2.JPG" style="width:100%" onclick="openModal();currentSlide(4)"
-                        class="hover-shadow cursor img-thumbnail">
-                </div>
-                <div class="column">
-                    <img src="images/crying.JPG" style="width:100%" onclick="openModal();currentSlide(5)"
+                    <img src="images/crying.JPG" alt="Misery" style="width:100%" onclick="openModal();currentSlide(5)"
                         class="hover-shadow cursor img-thumbnail">
                 </div>
             </div>
@@ -60,31 +60,31 @@
 
                     <div class="mySlides">
                         <div class="numbertext">1 / 5</div>
-                        <img src="images/headless.JPG" style="width:50%">
+                        <img src="images/headless.JPG" alt="Faceless" style="width:50%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">2 / 5</div>
-                        <img src="images/orange.JPG" style="width:50%">
+                        <img src="images/orange.JPG" alt="Vogue pose" style="width:50%">
                     </div>
 
                     <div class=" mySlides">
                         <div class="numbertext">3 / 5</div>
-                        <img src="images/back.JPG" style="width:50%">
+                        <img src="images/back.JPG" alt="Thoughts" style="width:50%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">4 / 5</div>
-                        <img src="images/back2.JPG" style="width:50%">
+                        <img src="images/back2.JPG" alt="Relaxation" style="width:50%">
                     </div>
 
                     <div class=" mySlides">
                         <div class="numbertext">5 / 5</div>
-                        <img src="images/crying.JPG" style="width:50%">
+                        <img src="images/crying.JPG" alt="Misery" style="width:50%">
                     </div>
 
                     <a class="prev top-50 start-0" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next top-50" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="next top-50 end-0" onclick="plusSlides(1)">&#10095;</a>
 
                     <div class="caption-container">
                         <p id="caption"></p>
@@ -93,23 +93,23 @@
 
                     <div class="column">
                         <img class="demo cursor" src="images/headless.JPG" style="width: 50%" onclick="currentSlide(1)"
-                            alt="Headless">
+                            alt="Faceless, Acrylic, 210 x 297 mm">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="images/orange.JPG" style="width:50%" onclick="currentSlide(2)"
-                            alt="Vogue Pose">
+                            alt="Vogue Pose, Acrylic, 210 x 297 mm">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="images/back.JPG" style="width:50%" onclick="currentSlide(3)"
-                            alt="Mountains and fjords">
+                            alt="Thoughts, Acrylic, 210 x 297 mm">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="images/back2.JPG" style="width:50%" onclick="currentSlide(4)"
-                            alt="Northern Lights">
+                            alt="Relaxation, Acrylic, 210 x 297 mm">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="images/crying.JPG" style="width:50%" onclick="currentSlide(5)"
-                            alt="Anxiety">
+                            alt="Misery, Acrylic, 210 x 297 mm">
                     </div>
                 </div>
             </div>
